<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v4.widget.DrawerLayout
        android:id="@+id/register_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/register_contents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/register_profiles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/join_name"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/petplantlogo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="bottom|center_horizontal"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/register_email_form"
                        android:layout_width="350dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/textform"
                        android:ems="10"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="45dp" />


                    <EditText
                        android:id="@+id/register_pw_form"
                        android:layout_width="350dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:background="@drawable/textform"
                        android:ems="10"
                        android:hint="@string/login_pw_hint"
                        android:inputType="textPassword"
                        android:paddingLeft="45dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp">

                    <android.support.v7.widget.AppCompatCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/agreement"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:gravity="center_horizontal"
                    android:paddingTop="20dp">

                    <Button
                        android:id="@+id/register_button"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:background="@color/bright_blue_a"
                        android:onClick="onSubmitClicked"
                        android:text="@string/register_submit"
                        android:textColor="@android:color/white"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_drawer_nav"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="@color/skyblue1"
            android:orientation="vertical"
            android:textSize="48sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/title_page"
                android:textSize="24sp" />
        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>