<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/graphLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainback"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/graph_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/graph_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/graph_contents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingTop="10dp">

            <!--Moisture-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/moisture_frame"
                    android:layout_width="140dp"
                    android:layout_height="140dp">
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/moisture"
                    android:textColor="@color/darker_green"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--Illumination-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/illumination"
                    android:textColor="@color/darker_mandarin"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:id="@+id/illumination_frame"
                    android:layout_width="140dp"
                    android:layout_height="140dp">
                </FrameLayout>
            </LinearLayout>

            <!--Temperature-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/temperature_frame"
                    android:layout_width="140dp"
                    android:layout_height="140dp">
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/temperature"
                    android:textColor="@color/dark_lemon"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

        </LinearLayout>

        <TextView
            android:id="@+id/graph_drawer_nav"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="#009688"
            android:gravity="center"
            android:text="DRAWER"
            android:textSize="48sp" />
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>